--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,20 @@
+@font-face {
+  font-family: "Celattin";
+  src: url("../public/assets/fonts/celattin.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "DM Sans";
+  src: url("../public/assets/fonts/DMSans-Regular.ttf") format("truetype");
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: "DM Sans";
+  src: url("../public/assets/fonts/DMSans-Bold.ttf") format("truetype");
+  font-weight: 700;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +22,19 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: 'DM Sans';
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+h1, 
+h2 {
+  font-family: 'Celattin';
+}
+
+a {
+  text-decoration: none;
 }
